--- a/mona.html
+++ b/mona.html
@@ -2,12 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Image Guess</title>
-        <style> body {margin: 20px; } </style>
+        <title> Image Guess </title>
+        <style> body { margin: 20px; } </style>
         <script>
-        </script>
+            window.onload = init;
+            function init() {
+                var image = document.getElementById("zero");
+            }
+         </script>
     </head>
     <body>
-        <img id="zero" scr="zeroblur.jpg">
+        <img id="zero" src="zeroblur.jpg">
     </body>
 </html>
