--- a/mona.html
+++ b/mona.html
@@ -3,17 +3,24 @@
     <head>
         <meta charset="utf-8">
         <title> Image Guess </title>
-        <style> body { margin: 20px; } </style>
+        <style> 
+        body { margin: 20px; } 
+        img { margin: 20px; }
+        </style>
         <script>
             window.onload = init;
             function init() {
-                var image = document.getElementById("zero");
-                image.onclick = showAnswer;
+                var images = document.getElementsByTagName("img");
+                for (var i=0;i<images.length;i++) {
+                    images[i].onclick = showAnswer;
+                }
             };
-            function showAnswer() {
-                var image = document.getElementById("zero");
-                image.src = "zero.jpg"
-            }
+            function showAnswer(eventObj) {
+                var image = eventObj.target;
+                var name = image.id;
+                name = name + ".jpg";
+                image.src = name;
+            };
          </script>
     </head>
     <body>
