--- a/timer.html
+++ b/timer.html
@@ -4,10 +4,17 @@
         <meta charset="utf-8">
         <title>Timer 5 sec</title>
         <script>
-       function timerHandler() {
-        alert("Hey what are you doing just sitting there staring at a blank screen?");
-       }
-       setTimeout(timerHandler,5000);
+       var tick = true;
+       function ticker() {
+        if (tick) {
+            console.log("Tick");
+            tick = false;
+        } else {
+            console.log("Tock");
+            tick = true;
+        }
+       };
+       setInterval(ticker,1000);
         </script>
     </head>
     <body>
